objects/C_Suite_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>C-Suite Contacts</relationshipLabel>
        <relationshipName>C_Suite_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>C-Suite Contacts</relationshipLabel>
        <relationshipName>C_Suite_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>C-Suite Contact</label>
    <nameField>
        <label>C-Suite Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C-Suite Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>